# SharkOS

./: .clangd  .gitignore  .proto  LICENSE  Makefile  README.md  SharkOS.code-workspace  error_log.txt  monitor_serial.py
.cargo/: config.toml
.github/workflows/: release.yml
android/rust_ui/: Cargo.toml  decode_test.js  package-lock.json  package.json  tauri.conf.json
android/rust_ui/android/: AndroidManifest.xml
android/rust_ui/capabilities/: default.json
android/rust_ui/icons/: icon.icns  icon.png.b64
android/rust_ui/src/: index.html  lib.rs  main.rs  main.ts  ui.rs
android/rust_ui/src/bt/: addresses.rs  commands.rs  listener.rs  mod.rs  sender.rs
docs/: NANOPB_INSTALL.md
esp32-dev/: possible_conflicts.md
esp32-dev/cc1101/: E07-M1101D-SMA_Usermanual_EN_v1.30.docx  E07-M1101D-SMA_Usermanual_EN_v1.txt  cc1101specsheet
main/: BleMouse.h  ELECHOUSE_CC1101_SRC_DRV.cpp  ELECHOUSE_CC1101_SRC_DRV.h  HIZMOS_OLED_U8G2lib.ino  bad-usb-menu.ino  ble-scanner.ino  check-sys-devices.ino  commands.h  events.h  events.ino  flasher-tool-function.ino  globals.h  hardware-utils.ino  jammer-spec-channel.ino  main.ino  mainmenu.ino  nfc-menu.ino  nrf-jammer.ino  nrf-scanner.ino  nrf-tools.ino  packet-analyzer.ino  rename_cc1101.pl  restart-logic.ino  sub-ghz-menu.ino  subghz_control.ino  transceivers.h  universal-remotes.ino  wifi-menu.ino  wifi-scanning.ino
main/deadcode/: about-logic.ino  best-menu-sample.ino  ble-menu.ino  calculater.ino  files-menu.ino  globalvars-funcs.ino  gpio-menu.ino  images.h  infrared-menu.ino  mainmenu.h  mainmenu.ino  pomdoro-timer.ino  (+3 more)
(+13 files in other folders)
