[package]
name = "sharkos"
version = "0.1.0"
description = "SharkOS: A custom Android app to connect to an esp32 and manage sensor data."
authors = ["Jonathan Stoff <jonathanlstoff@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sharkos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
android_logger = "0.13"
csv = "1.3" # For parsing traces if needed? No, user mentioned traces.txt but maybe just strings.
ndk = "0.9"
jni = "0.21"
ndk-context = "0.1.1"
tauri-plugin-log = "2"



